--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
-        "vue-router": "^3.3.4"
+        "vue-router": "^3.3.4",
+        "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "gulp": "^4.0.2"
     }
 }
